# kuzu

./: CMakeLists.txt  Makefile
.github/workflows/: build-and-release.yml  build-wheels.yml
scripts/pip-package/: setup.py
src/catalog/: catalog.cpp  catalog_set.cpp
src/common/file_system/: file_system.cpp  local_file_system.cpp  virtual_file_system.cpp
src/include/catalog/: catalog.h  catalog_set.h
src/include/common/: constants.h
src/include/common/file_system/: file_system.h  local_file_system.h  virtual_file_system.h
src/include/storage/: checkpointer.h  page_manager.h  storage_manager.h  storage_utils.h
src/include/storage/buffer_manager/: buffer_manager.h
src/include/storage/table/: lazy_segment_scanner.h  node_group.h  node_table.h  rel_table.h  rel_table_data.h  table.h
src/include/storage/wal/: wal.h  wal_replayer.h
src/include/transaction/: transaction_manager.h
src/storage/: checkpointer.cpp  page_manager.cpp  shadow_file.cpp  storage_manager.cpp
src/storage/buffer_manager/: buffer_manager.cpp
src/storage/table/: csr_node_group.cpp  node_group.cpp  node_table.cpp  rel_table.cpp  rel_table_data.cpp  table.cpp
src/storage/wal/: wal.cpp  wal_replayer.cpp
src/transaction/: transaction_manager.cpp
test/transaction/: checkpoint_test.cpp
tools/: CMakeLists.txt
tools/dotnet_api/: CMakeLists.txt
tools/dotnet_api/scripts/: build-local-osx.sh  build-nuget.sh
tools/dotnet_api/src/: Kuzu.Net.sln
tools/dotnet_api/src/Kuzu.Net/: Kuzu.Net.csproj  Kuzu.Net.targets
tools/dotnet_api/src/Kuzu.Net.Tests/: GlobalUsings.cs  Kuzu.Net.Tests.csproj
tools/dotnet_api/src/Kuzu.Net.Tests/Core/: ConnectionTests.cs  DataTypeTests.cs  DatabaseTests.cs  FinalizerTests.cs  PreparedStatementTests.cs  QueryResultTests.cs  ValueTests.cs
tools/dotnet_api/src/Kuzu.Net.Tests/Infrastructure/: KuzuTestBase.cs
tools/dotnet_api/src/Kuzu.Net.Tests/Integration/: IntegrationTests.cs
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/44d9c5ff-d19a-49be-ae99-242300aaf0e8/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_40_40.coverage
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/5e771d5f-7d94-4ebc-af86-d709a54a8325/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_41_53.coverage
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/8393a80c-f899-4d1d-9d15-d73bfe7068c5/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_44_45.coverage
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/854ea57a-202d-417f-b2dd-bf27ebf1ab3d/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_39_14.coverage
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/a9d4aeac-71d7-4fd0-90dd-a0255e698335/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_54_37.coverage
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/d6f657ba-4105-4e33-b8a6-a79aaf5e7f2e/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_40_32.coverage
tools/dotnet_api/src/Kuzu.Net.Tests/TestResults/fcf95135-9044-46f4-a249-f2de2d5f2bcd/: shlomiassaf_shlomiassafs-MacBook-Pro_2026-03-10.19_39_31.coverage
tools/dotnet_api/src/Kuzu.Net/runtimes/osx-arm64/native/: libkuzunet.dylib
tools/dotnet_api/swig/: kuzu.i
tools/nodejs_api/: package.json
